# engineeringdojo

./: CMakeLists.txt  CTestTestfile.cmake  libmym.c  libmym.h  main.c
Testing/Temporary/: CTestCostData.txt
lib/: libmym.so.1
lib/pkgconfig/: libmym.pc
tests/: CMakeLists.txt  CTestTestfile.cmake  tests.c
